Upgrading project to Spring Boot 3.0.0